# discord-better-menus

./: .gitignore  LICENSE  pyproject.toml
better_menus/: __init__.py
discord/ext/better_menus/: __init__.py
tests/: __init__.py
